fixing small layout bugs

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -434,6 +434,8 @@ nav
   margin-top: 15vh !important
   background-color: rgba(255, 255, 255, 0.42)
   @media screen and (max-width: $breakpoint-tablet-width)
+    padding-right: 1.5rem
+    padding-left: 1.5rem
     padding-top: 7rem !important
     background-color: unset
     margin-top: unset !important
@@ -514,7 +516,7 @@ nav
     background-repeat: unset
     bottom: 0 !important
     top: unset !important
-    height: 96vh
+    height: 96%
     
 .aboutBackgroundContainer
   background-image: url('../img/bio.jpg')
